fix for email to long on small screen

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -49,10 +49,22 @@
 
 .views-field-field-contact-email, .field--name-field-contact-email {
   grid-area: email;
+  font-size: 1.5rem;
 }
 
 .views-field-field-contact-number, .field--name-field-contact-number {
   grid-area: number;
 }
 
+
+@media only screen and (max-width: 500px) {
+  .views-field-field-contact-email, .field--name-field-contact-email {
+    font-size: 1.1rem;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .views-field-field-contact-email, .field--name-field-contact-email {
+    font-size: 2rem;
+  }
+}
 /*# sourceMappingURL=contact.css.map */
